--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,19 +5,25 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
+      - checkout
+      - run: npm i
       - run: npm run lint
   
   test:
     docker:
       - image: circleci/node:13.8.0
     steps:
+      - checkout
+      - run: npm i
       - run: npm run test
+
 
   analyze:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: npm run audit
+      - checkout
+      - run: npm audit
 
 workflows:
   my_workflow:
